[project]
name = "rvc"
version = "0.3.5"
description = "An easy-to-use Voice Conversion framework based on VITS."
authors = [
    { name = "Ftps", email = "ftpsflandre@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "torch>=2.4.1",
    "fairseq>=0.12.2",
    "soundfile>=0.12.1",
    "librosa>=0.10.2.post1",
    "praat-parselmouth>=0.4.4",
    "pyworld>=0.3.4",
    "torchcrepe>=0.0.23",
    "av>=13.0.0",
    "faiss-cpu>=1.8.0.post1",
    "python-dotenv>=1.0.1",
    "pydub>=0.25.1",
    "click>=8.1.7",
    "tensorboardx>=2.6.2.2",
    "poethepoet>=0.28.0",
    "uvicorn>=0.30.3",
    "fastapi>=0.111.1",
    "python-multipart>=0.0.10",
    "numba>=0.60.0",
]

[project.urls]
"github" = "https://github.com/RVC-Project/Retrieval-based-Voice-Conversion"

[project.scripts]
rvc = "rvc.wrapper.cli.cli:main"

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6"
]

[tool.rye]
managed = true
universal = true

[tool.rye.scripts]
rvc-api = "uvicorn rvc.wrapper.api.api:app --host 0.0.0.0 --port 8000 --reload"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
preview = true
line-length = 88

select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # isort
    "I",
]
ignore = [
    # Module level import not at top of file
    "E402",
    # Line too long
    "E501",
    # Ambiguous variable name
    "E741"
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["src"]


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["rvc"]

